--- a/web_dynamic/templates/2-hbnb.html
+++ b/web_dynamic/templates/2-hbnb.html
@@ -15,7 +15,9 @@
   <body>
     <header>
       <div class="logo"></div>
-      <div class="api_status"></div>
+      <div class="api_status" style="margin-right:30px;text-align:center;background-color:#cccccc;
+                                     height:40px;width:40px;border-radius:50px">
+      </div>
     </header>
     <div class="container">
       <section class="filters">
