--- a/web_dynamic/templates/2-hbnb.html
+++ b/web_dynamic/templates/2-hbnb.html
@@ -54,7 +54,7 @@
 	</div>
 	<button type="button">Search</button>
       </section>
-      <div class="placesh1"><h1>Places></div>
+      <div class="placesh1"><h1>Places</div>
       <section class="places">
 	<!-- <h1>Places</h1> -->
 	{% for place in places %}
